test/modules/packages/Crypto/saru/hashing/hash2.good
hash2.chpl:4: error: halt reached - A digest with the name 'SHA1024' doesn't exist.
